Slightly edited look.

--- a/newManager.html
+++ b/newManager.html
@@ -81,9 +81,8 @@
       <h1>BookmarkNests</h1> <h2>Dynamic Nested Tags - put it (every)where you want.</h2>
     
 <div style='float:right'>
-<p>To go to page, click on link. To edit bookmark, click 'Edit bookmark' and then the link.</p>
+<p>To go to the site, click on link. To edit bookmark, click 'Turn On Edit Mode' and then the link.</p>
 <input type='button' value='Turn On Edit Mode' id='editPosition'>  <button id='close'>Close Manager</button>
-Help will trigger the div that contains the statement above.
 </div>
 
 <section>
