--- a/newManager.html
+++ b/newManager.html
@@ -53,7 +53,7 @@
 	height:'100%';
   }
   
-  .editor .ui-dialog-titlebar, .alert .ui-dialog-titlebar {display:none}
+  .alert .ui-dialog-titlebar {display:none}
   </style>
 
 
@@ -83,7 +83,7 @@
       <h1>BookmarkNests</h1> <h2>Dynamic Nested Tags - put it (every)where you want.</h2>
     
 <div style='float:right'>
-<p>To go to the site, click on link. To edit bookmark, click 'Turn On Edit Mode' and then the link.</p>
+<p>To go to the site, click on the link. To edit a bookmark, click 'Turn On Edit Mode' and then the link.</p>
 <input type='button' value='Turn On Edit Mode' id='editPosition'>  <button id='close'>Close Manager</button>
 </div>
 
@@ -104,7 +104,7 @@
   
    
 	
-	<!-- 	THE UNDOERS-->	
+	<!-- 	THE UNSETTERS-->	
 	
 	<div id='tags_chosen' class="tags_chosen options">
 
