Added area for links;printBookmarks can go forward or back

--- a/manager.html
+++ b/manager.html
@@ -34,6 +34,19 @@
   
 
 </section> <!-- #options -->
+
+
+<section class="links">
+
+</section>
+
+<!-- Content -->
+
+<section class="links">
+
+</section>
+
+
 </body>
 
 <script type="text/javascript" src="files/js/jquery.min-1.8.2.js"></script>
