--- a/newManager.html
+++ b/newManager.html
@@ -117,12 +117,21 @@
 
 </section> <!-- #options -->
 
+
+<section class="links">
+
+</section>
+
 <div style='clear:left'></div>
 
 <div id="container" class="iso-container clearfix greenButtons">
 
 
 </div> <!-- #container -->
+
+<section class="links">
+
+</section>
 
   </section> <!-- #content -->
 
